--- a/NhaSachDaiThang_BE_API.csproj
+++ b/NhaSachDaiThang_BE_API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Configurations\" />
+    <Folder Include="Controllers\" />
     <Folder Include="DTOs\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
