login signup forgotpassword

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,18 @@
 {
   "ConnectionStrings": {
-    "BookStoreDb": "Server=DESKTOP-CUR81NQ\\SQLEXPRESS;Database=BookStore04;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "BookStoreDb": "Server=DESKTOP-CUR81NQ\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
+  "EmailSettings": {
+    "Username": "nhasachdaithang@gmail.com", // Địa chỉ Gmail của bạn
+    "Password": "" // 
+  },
+  "JwtSettings": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "bpwHvkoQkBiIEmU7SAVhoUGPTwT9Bo6a",
+    "AccessTokenExpirationMinutes": 3600
+
   },
   "Logging": {
     "LogLevel": {
