--- a/NhaSachDaiThang_BE_API.csproj
+++ b/NhaSachDaiThang_BE_API.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Services\CommonInterface\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
