Đặt hàng, thanh toán online vnpay

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,12 +14,25 @@
     "AccessTokenExpirationMinutes": 3600
 
   },
+  "Vnpay": {
+    "TmnCode": "SHT3LBJL",
+    "HashSecret": "FYJW2EJYUD66TTVF37QUNN7ZEW4TLYTF",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "PaymentCallBack": {
+    "ReturnUrl": "http://localhost:5030/api/v1/VnPay/PaymentCallBack"
+  },
+  "TimeZoneId": "SE Asia Standard Time",
   "AllowedHosts": "*"
 }
 
