Đi báo cáo thôi :)

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,13 @@
   "ConnectionStrings": {
     "BookStoreDb": "Server=DESKTOP-CUR81NQ\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5030"
+      }
+    }
+  },
   "EmailSettings": {
     "Username": "nhasachdaithang@gmail.com", // Địa chỉ Gmail của bạn
     "Password": "" // 
@@ -11,7 +17,7 @@
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "SecretKey": "bpwHvkoQkBiIEmU7SAVhoUGPTwT9Bo6a",
-    "AccessTokenExpirationMinutes": 3600
+    "AccessTokenExpirationMinutes": 1440
 
   },
   "Vnpay": {
