--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "BookStoreDb": "Server=DESKTOP-CUR81NQ\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    //"BookStoreDb": "Server=DESKTOP-CUR81NQ\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "BookStoreDb": "workstation id=bookstore.mssql.somee.com;packet size=4096;user id=nghiapt_SQLLogin_1;pwd=8ae3fgbx1g;data source=bookstore.mssql.somee.com;persist security info=False;initial catalog=bookstore;TrustServerCertificate=True"
+
   },
   "Kestrel": {
     "Endpoints": {
